# hardwaremanagerd

./: Cargo.toml  README.adoc  getdeviceinfo.py  hardwaremanagerd.spec
hardwarectl/: Cargo.toml
hardwarectl/src/: main.rs
hardwaremanagerd/: Cargo.toml
hardwaremanagerd/src/: main.rs
hardwaremanagerd/src/lib/: cpu.rs  daemon.rs  devicereader.rs  memory.rs
overrides/pci/: amdgpu.conf  nvidia.conf
runtime/etc/hardwaremonitord/profiles/pci/: amdgpu.conf  nvidia.conf
runtime/usr/lib/systemd/system/: hardwaremanagerd.service
src/: daemon.rs  devicereader.rs  main.rs  memory.rs
src/lib/: cpu.rs  daemon.rs  memory.rs
