[package]
name = "gpumanagerd"
version = "0.1.0"
authors = ["jstone"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udev = "0.4"
dbus = "0.8.2"
smbios = "0.1.7"
glob = "0.3.0"
byteorder = "1.3.4"

[profile.release]
lto = true
